<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="fallback_app_name" tools:ignore="MissingTranslation">application</string>

    <string name="update_alert_message" tools:ignore="StringFormatCount">A new version of %1$s is available. Please update to version %2$s now.</string>
    <string name="update_available">Update available</string>
    <string name="update">Update</string>
    <string name="next_time">Next time</string>
    <string name="skip_this_version">Skip this version</string>
    <string name="actualizaci_n_disponible">Actualización Disponible</string>
    <string name="desc_version">Existe una nueva versión con nuevas funcionalidades y mejoras. Descargatela para disfrutar de ellas.</string>
    <string name="desc_version_app">Existe una nueva versión para la aplicación %1$s con nuevas funcionalidades y mejoras. Descargatela para disfrutar de ellas.</string>
    <string name="posponer">Posponer</string>
    <string name="actualizar">Actualizar</string>
    <string name="no_volver_a_mostrar">No volver a mostrar</string>
</resources>
