<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentFinger"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:visibility="visible">

    <TextView
        android:id="@+id/tvSirenAlertMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/pm15"
        android:background="@drawable/fondo_modal">

        <TextView
            android:id="@+id/btnSirenSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/pm15"
            android:layout_marginRight="@dimen/pm15"
            android:text="@string/no_volver_a_mostrar"
            android:textSize="@dimen/ts15"
            android:textColor="@color/colorPrimary"
            style="@style/textoBlackBold"/>


        <ImageView
            android:id="@+id/fingerprint_icon"
            android:layout_width="@dimen/pm50"
            android:layout_height="@dimen/pm50"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/pm50" />

        <TextView
            android:id="@+id/txtTituFinger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fingerprint_icon"
            android:gravity="center"
            android:padding="@dimen/pm5"
            android:layout_centerHorizontal="true"
            android:text="@string/actualizaci_n_disponible"
            android:textSize="@dimen/ts25"
            style="@style/textoBlackBold"/>

        <TextView
            android:id="@+id/fingerprint_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="@dimen/pm20"
            android:layout_marginRight="@dimen/pm20"
            android:layout_marginBottom="@dimen/pm10"
            android:layout_below="@+id/txtTituFinger"
            android:layout_centerHorizontal="true"
            android:text="@string/desc_version"
            style="@style/textoBlack"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pm15"
            android:layout_below="@+id/fingerprint_description"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnSirenNextTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/pm10"
                android:layout_marginRight="@dimen/pm5"
                android:gravity="center"
                android:text="@string/posponer"
                android:background="@drawable/btn_acept"
                android:textSize="@dimen/ts15"
                style="@style/textoBlancoBold"/>


            <TextView
                android:id="@+id/btnSirenUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/pm10"
                android:layout_marginLeft="@dimen/pm5"
                android:gravity="center"
                android:text="@string/actualizar"
                android:background="@drawable/btn_acept"
                android:textSize="@dimen/ts15"
                style="@style/textoBlancoBold"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>